Update Project 1 Company Story.html

--- a/Project 1 Company Story.html
+++ b/Project 1 Company Story.html
@@ -7,10 +7,10 @@
 
 <center>
 <h1><b> Welcome to Willie and Willy's Writing Wearhouse! </b></h1>
+<br>
+<br>
+<font size = "5" color = "white"><b><u> Our Company Story </u></b></font>
 </center>
-<br>
-<br>
-<font size = "5"><b><u> Our Company Story </u></b></font>
 <br>
 <font size = "4"> For the past 5 weeks, we here at Willie and Willy's have been a one stop shop for everything a writer could possibly need. 
 Our dedicated <a href = "team_page" target="_blank">team</a> are passionate about helping all writers, from the hobbyist to the professional reporter, with all of their writing needs. 
@@ -20,7 +20,9 @@ We'd be happy to help you with any of your writing needs.</font>
 <br>
 <br>
 <br>
-<font size = "5"><b><u>Our History</u></b></font>
+<center>
+<font size = "5" color = "white"><b><u>Our History</u></b></font>
+ </center>
 <br>
 <font size = "4"> Our dedicated team formed Willie and Willy's about 5 weeks ago on a cold winter day in West Lafayette. This team of <a href= "https://purdue.edu" target = "_blank">Purdue University</a>
  students put their talents together to make the world of writing a better place. Some might say that 5 weeks is a short amount of time, but we've taken the writing world by storm.
@@ -33,16 +35,12 @@ We'd be happy to help you with any of your writing needs.</font>
  <br>
 <p id="sudo"></p>
   
-<script>
-/* Function to use lastModified property */
-   function geeks() {
-    var x = document.lastModified;
-    document.getElementById("Company Story").innerHTML = x;
-}
-    </script><font size = "3"><font color = "gray"> This page was last edited on</font></font>
+<script language = "javascript">
+ document.write("LastModified"+document.lastModified + "")
+ </script>
+
  <br>
  <br>
  <font size = "3"><a href = "mailto:rluedtke@purdue.edu">Contact Me: Reed Luedtke</a></font>
- </right>
 </body>
 </html>
