Update Project 1 Company Story.html

--- a/Project 1 Company Story.html
+++ b/Project 1 Company Story.html
@@ -9,19 +9,28 @@
 <h1><b> Welcome to Willie and Willy's Writing Wearhouse! </b></h1>
 <br>
 <br>
-<font size = "5" color = "white"><b><u> Our Company Story </u></b></font>
+<font size = "5" color = "white" face = "Times New Roman"><b><u> Our Company Story </u></b></font>
 </center>
 <br>
 <font size = "4"> For the past 5 weeks, we here at Willie and Willy's have been a one stop shop for everything a writer could possibly need. 
 Our dedicated <a href = "team_page" target="_blank">team</a> are passionate about helping all writers, from the hobbyist to the professional reporter, with all of their writing needs. 
-We provide a large selection of products for our customers, like pens, pencils, paper, and all of the essential materials it takes to be a writer. <u>Hold on!</u> We don't stop there. 
-We also offer writers with comprehensive support help take their writing to the next level. Just couple of our services include in house editing and proofreading. Come check us out. 
+We provide a large selection of products for our customers such as the following:
+ <br>
+ <ul>
+  <li>pens</li>
+  <li>pencils</li>
+  <li>paper</li>
+  <li>white-out</li>
+  <li>Associated Press Guides</li>
+ </ul>
+ <br>
+  <u>Hold on!</u> We don't stop there. We also offer writers with comprehensive support help take their writing to the next level. Just couple of our services include in house editing and proofreading. Come check us out. 
 We'd be happy to help you with any of your writing needs.</font>
 <br>
 <br>
 <br>
 <center>
-<font size = "5" color = "white"><b><u>Our History</u></b></font>
+<font size = "5" color = "white" face = "Times New Roman"><b><u>Our History</u></b></font>
  </center>
 <br>
 <font size = "4"> Our dedicated team formed Willie and Willy's about 5 weeks ago on a cold winter day in West Lafayette. This team of <a href= "https://purdue.edu" target = "_blank">Purdue University</a>
