Update Project 1 Company Story.html

--- a/Project 1 Company Story.html
+++ b/Project 1 Company Story.html
@@ -8,14 +8,17 @@
 <center>
 <h1><b> Welcome to Willie and Willy's Writing Wearhouse! </b></h1>
 <br>
+ <img src = "typewriter.jpeg">
 <br>
-<font size = "5" color = "white" face = "Times New Roman"><b><u> Our Company Story </u></b></font>
+<font size = "5" color = "white" face = "Times New Roman"><b><u> Get to Know Us! </u></b></font>
 </center>
 <br>
-<font size = "4"> For the past 5 weeks, we here at Willie and Willy's have been a one stop shop for everything a writer could possibly need. 
-Our dedicated <a href = "team_page" target="_blank">team</a> are passionate about helping all writers, from the hobbyist to the professional reporter, with all of their writing needs. 
-We provide a large selection of products for our customers such as the following:
+<br>
+ <font><font size = "5"><b> Company History </b></font></font>
  <br>
+<font size = "4"> For the past 6 years, we here at Willie and Willy's have been a one stop shop for everything a writer could possibly need. 
+Our dedicated team is passionate about helping all writers, from the hobbyist to the professional reporter, with all of their writing needs. 
+We provide a large selection of products for our customers such as the following:
  <ul>
   <li>pens</li>
   <li>pencils</li>
@@ -23,21 +26,27 @@ We provide a large selection of products for our customers such as the following
   <li>white-out</li>
   <li>Associated Press Guides</li>
  </ul>
- <br>
   <u>Hold on!</u> We don't stop there. We also offer writers with comprehensive support help take their writing to the next level. Just couple of our services include in house editing and proofreading. Come check us out. 
 We'd be happy to help you with any of your writing needs.</font>
 <br>
 <br>
 <br>
-<center>
-<font size = "5" color = "white" face = "Times New Roman"><b><u>Our History</u></b></font>
- </center>
+<font size = "5"><b>Our History</b></font>
 <br>
-<font size = "4"> Our dedicated team formed Willie and Willy's about 5 weeks ago on a cold winter day in West Lafayette. This team of <a href= "https://purdue.edu" target = "_blank">Purdue University</a>
- students put their talents together to make the world of writing a better place. Some might say that 5 weeks is a short amount of time, but we've taken the writing world by storm.
- We started our revolutionary journey by just selling writing supplies, and in our first week, we had sold out of our <i>entire inventory</i>. Going into our second week, we expanded our operations. 
- We secured a wholesale supplier and warehouse space, and we more than doubled the amount of products we were able to move. With so many writers coming to us for equipment, we decided to ask them how we could better help them, and they wanted help with their writing.
- In our third week, we released our trademark writing support services. The writers loved it! For the past two weeks we've been meeting with writers around the clock helping improve their writer and prepare for those future publisher meetings.
+<font size = "4"> Our dedicated founder Ellie Zaczek formed Willie and Willy's about 6 years ago on a cold winter day in West Lafayette when she was working with 2 young writers (Willie and Willy).
+ She has slowly built team of <a href= "https://purdue.edu" target = "_blank">Purdue University</a> students who use their talents together to make the world of writing a better place. 
+ Over the past 6 years, we've taken the writing world by storm. We started our revolutionary journey by just selling writing supplies, and Ellie would roam the store getting to know the writers using our products.
+Writers grew to love the store's atmoshpere and talking to Ellie. Before she knew it, the store was selling out of its <i>entire inventory</i>., so going into our second year, we expanded our operations. 
+ We secured a wholesale supplier and warehouse space, and we more than doubled the amount of products we were able to move. With so many writers coming to us for equipment, Ellie decided to ask them how we could better help them, 
+ and they wanted help with their writing. In our third year, we released our trademark writing support services. The writers loved it! Since then, we've been meeting with writers around the clock helping improve their writer and 
+ prepare for those future publisher meetings. Today, We have the following 5-person management team:
+ <ol>
+  <li> Ellie Zaczek <i>(Owner)</i></li>
+  <li> Rajat Kadian <i>(Product Manager)</i></li>
+  <li> Gregoryy Krikorian <i>(Creative Director)</i></li>
+  <li> Reed Luedtke <i>(Finance Manager)</i></li>
+  <li> Dustin Rabin <i>(Operations Manager)</i></li>
+ </ol>
  </font>
  <br>
  <br>
@@ -45,7 +54,7 @@ We'd be happy to help you with any of your writing needs.</font>
 <p id="sudo"></p>
   
 <script language = "javascript">
- document.write("LastModified"+document.lastModified + "")
+ document.write("Last Modified: "+document.lastModified + "")
  </script>
 
  <br>
