--- a/Project 1 Company Story.html
+++ b/Project 1 Company Story.html
@@ -8,7 +8,7 @@
 <center>
 <h1><b> Welcome to Willie and Willy's Writing Wearhouse! </b></h1>
 <br>
- <img src = "typewriter.jpeg">
+ <img src = "typewriter.jpg">
 <br>
 <font size = "5" color = "white" face = "Times New Roman"><b><u> Get to Know Us! </u></b></font>
 </center>
