--- a/final_CS_webpage.html
+++ b/final_CS_webpage.html
@@ -36,7 +36,7 @@ Don't just take our word for it! Ask our customers!</h1>
 <br>
 <h2 style= "text-align:center"><u><b>About the Author</b></u></h2>
 <h2 style= "text-align:center"><b>Dustin Rabin</b></h2>
-<center><img src="" height="250" width="200" align="center"></center>
+<center><img src="dustin.jpg" height="250" width="200" align="center"></center>
 <br>
 <br>
 <ul style = "text-align: left"><li>Dustin's role on our team here is to be in charge of the hiring process
