--- a/frame1.html
+++ b/frame1.html
@@ -3,12 +3,15 @@
 <head>
 </head>
 <body bgcolor = "#FFD700">
-<br>
+ <br>
+<a href = "Project 1 Company Story.html" target = "showframe">Company Story</a>
+ <br>
+<a href = "Management Team.html" target = "showframe">Management Team</a>
+ <br>
 <a href = "frame2.html" target = "showframe">Company Services</a>
-
-<br>
-<br>
-<br>
+ <br>
+<a href = "final_CS_Webpage.html" target = "showframe">Customer Testimonial</a>
+ <br>
 
 
 <br>
