--- a/frame1.html
+++ b/frame1.html
@@ -10,7 +10,7 @@
  <br>
 <a href = "frame2.html" target = "showframe">Company Services</a>
  <br>
-<a href = "final_CS_Webpage.html" target = "showframe">Customer Testimonial</a>
+<a href = "final_CS_webpage.html" target = "showframe">Customer Testimonial</a>
  <br>
 
 
