--- a/frame1.html
+++ b/frame1.html
@@ -12,6 +12,8 @@
  <br>
 <a href = "final_CS_webpage.html" target = "showframe">Customer Testimonial</a>
  <br>
+<a href = "MGMT382-Krikorian.html" target = "showframe">Products and Services</a>
+ <br>
 
 
 <br>
