--- a/frame2.html
+++ b/frame2.html
@@ -2,87 +2,86 @@
 <html>
 <head>
 </head>
-<body bgcolor = "#FFD700">
+<body bgcolor = "gold">
 
-<span style= "font-family:comic sans ms"><font size = "6" >
-<h1 align= "center"><b> 
-<u><i>Product and Services</i></u>
-</b></h1>
-</font></span style>
 
-<span style= "font-family:Times" align = "middle"><font size = "8">
+<center><h1><b><u><font size = "12" face = "Times New Roman"> Product and Services </font></u></b></h1></center>
+
+
+<font size = "8">
 <b><u>Writing Services</u><img src = "WritingServices_pic.jpg" width = 600 align = "right"></b>
-</font></font></span style>
+</font>
 
-<span style= "font-family:Arial"><font size = "6">
+
+
+<font size = "6">
 <ol>
 	<li>Writing Coach</li>
 	<li>Proof Reading</li>
-	<li>Plagiarism Checker</li>
+	<li>Plagiarism Checker</li>
 </ol>
 </font>
-<span style= "font-family:Rockwell" align = "left"><font size = "5">
 
-<p>----</p>
-
-<p>
+<p><font size = "5">
 
 We have a plethora of writing services available at Willie and Willy's Writing Warehouse. This includes proofreading and feedback by expert 
 linguists.Come check-in to see the availabilities of our writing coaches to help you create your best draft ever! Moreover, all locations have 
 serene background music and essential oil diffused lounge areas that help stimulate your imagination and creativity to the best levels.
 
-</p>
-</a></font> 	
-</span style>
+</font></p>
+
+
 <br>
 <br>
 <br>
 <br>
 
-<span style= "font-family:Rockwell" align = "middle"><font size = "8">
+<font size = "8">
 <b><u>Product Services</u><img src = "Productsoffered_pic.jpg" width = 600 align = "right"></b>
-</font></font></span style>
+</font>
 
-<span style= "font-family:Arial"><font size = "6">
+
+<font size = "6">
 <ol>
 	<li>Word Software</li>
 	<li>Writing Books</li>
 	<li>Grammar Guides</li>
 </ol>
 </font>
-<span style= "font-family:Rockwell" align = "left"><font size = "5">
-<p>----</p>
-<p>
-When imagination meets corrections it makes perfection. The same is true for our writing patrons. Search through our multiple guide books
-to aid you produce a written piece which is a masterpiece in both creativity and functionality. Our Writing Warehouse sells the latest version 
-of the Microsoft Word amongst other softwares for virtual writers alongwith various Grammar and Syntax guides. Come check our collection in stores!
 
-</p>
-</a></font> 	
-</span style>
+<p><font size = "5">
+
+We have a plethora of writing services available at Willie and Willy's Writing Warehouse. This includes proofreading and feedback by expert 
+linguists.Come check-in to see the availabilities of our writing coaches to help you create your best draft ever! Moreover, all locations have 
+serene background music and essential oil diffused lounge areas that help stimulate your imagination and creativity to the best levels.
+
+</font></p>
+
+
 <br>
 <br>
 <br>
 <br>
 
-<span style= "font-family:Rockwell"><font size = "5">
+<font size = "5">
 <p align= "center"><b> 
 Contact me: <a href= "mailto:rkadian@purdue.edu">Rajat Kadian<a/>
 
 </b></p>
-</font></span style>
+</font>
 
-<span style= "font-family:Rockwell"><font size = "5">
+<font size = "5">
 <p align= "center"><b> 
 <a href = "Presentation1.pdf" target = "_blank">See our locations</a>
 </b></p>
-</font></span style>
+</font>
 
-<span style= "font-family:Rockwell"><font size = "5">
+
+<font size = "5">
 <p align= "center"><b> 
 <a href = "https://www.youtube.com/watch?v=b6rC5ioILsk" target = "_blank">Check out our Video</a>
 </b></p>
-</font></span style>
+</font>
 	
 Date last modified:  <script>document.write( document.lastModified );</script>
 
