--- a/Management Team.html
+++ b/Management Team.html
@@ -11,7 +11,7 @@
 <br>
 <font size = "5"><b>Ellie Zaczek: </b><i>Owner</i></font>
 <br>
-<img src = "seniorpic.jpg" width = "200" height 220>
+<img src = "ellie.jpg" width = "200" height 220>
 <br>
 Ellie started Willie and Willy's Writing Warehouse in 2012 after working with two young writers, Willie and Willy. She was so inspired by their talent that she wanted to continue helping more amateur and professional writers develop their careers, and named the company in honor of the two young men that started it all: Willie and Willy.
 <br>
@@ -78,7 +78,7 @@ Dustin is our newest addition to the team with him being with the company for 1 
 <font size = "4"><u><b>More Resources: </b></u></font>
 <br>
 <ul>
-	<li><b>Purdue Owl: </b> Purdue Owl is a highly reputable and valuable source that amateurs and professionals can both use! The link to explore the website is <a href = "https://owl.purdue.edu/"> here. </a></li>
+	<li><b>Purdue Owl: </b> Purdue Owl is a highly reputable and valuable source that amateurs and professionals can both use! The link to explore the website is <a href = "https://owl.purdue.edu/" target= "_blank"> here. </a></li>
 <br>
 	<li><b>About us: </b>  To learn more about the roots of Willie and Willy's Writing Workshop and what keeps them running, check out the background <a href = "WWBeginning.docx"> here! </a></li>
 </ul>
