--- a/Management Team.html
+++ b/Management Team.html
@@ -6,7 +6,7 @@
 <body bgcolor = "gold">
 <h1><b><u><center><font face = "Times New Roman"> Willie and Willy's Writing Warehouse </font></center></u></b></h1>
 <br>
-<h2><b><center><font color = "white"> Meet the Team! </font></center></b></h2>
+<h2><b><center><font color = "white"> Meet Team #16! </font></center></b></h2>
 <br>
 <br>
 <font size = "5"><b>Ellie Zaczek: </b><i>Owner</i></font>
