--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <frameset cols="200,*">
 <frame src="frame1.html">
-<frame src="Project 1 Company Story.html" name="showframe">
+<frame src="Management Team.html" name="showframe">
 </frameset>
 </html>
