--- a/frame2.html
+++ b/frame2.html
@@ -24,9 +24,9 @@
 
 <p><font size = "5">
 
-We have a plethora of writing services available at Willie and Willy's Writing Warehouse. This includes proofreading and feedback by expert 
+<i>We have a plethora of writing services available at Willie and Willy's Writing Warehouse. This includes proofreading and feedback by expert 
 linguists.Come check-in to see the availabilities of our writing coaches to help you create your best draft ever! Moreover, all locations have 
-serene background music and essential oil diffused lounge areas that help stimulate your imagination and creativity to the best levels.
+serene background music and essential oil diffused lounge areas that help stimulate your imagination and creativity to the best levels.</i>
 
 </font></p>
 
@@ -51,9 +51,9 @@ serene background music and essential oil diffused lounge areas that help stimul
 
 <p><font size = "5">
 
-We have a plethora of writing services available at Willie and Willy's Writing Warehouse. This includes proofreading and feedback by expert 
+<i>We have a plethora of writing services available at Willie and Willy's Writing Warehouse. This includes proofreading and feedback by expert 
 linguists.Come check-in to see the availabilities of our writing coaches to help you create your best draft ever! Moreover, all locations have 
-serene background music and essential oil diffused lounge areas that help stimulate your imagination and creativity to the best levels.
+serene background music and essential oil diffused lounge areas that help stimulate your imagination and creativity to the best levels.</i>
 
 </font></p>
 
