--- a/final_CS_webpage.html
+++ b/final_CS_webpage.html
@@ -10,7 +10,7 @@
 Don't just take our word for it! Ask our customers!</h1>
 
 <h5 style = "font-size: 25px; text-align:center; color:black">"All of my needs were exceptionally met"</h5>
-<p style = "text-align: center; font-size: 15px"> They had every office supply that I needed, and they even offered to order any supplies they were missing or send me in the direction of another business that could. Exempliary customer serrvice and quality of the supplies they sold me, I was very impressed. </p>
+<p style = "text-align: center; font-size: 15px"> They had every office supply that I needed, and they even offered to order any supplies they were missing or send me in the direction of another business that could. Exemplary customer service and quality of the supplies they sold me, I was very impressed. </p>
 <h4 style = "font-size: 15px; text-align:center; color:black"><i><u>Wright Writer</u></i></h4>
 <hr size="5"
         color = black>
@@ -22,7 +22,7 @@ Don't just take our word for it! Ask our customers!</h1>
         color = black>
 
 <h5 style = "font-size: 25px; text-align:center; color:black">"The customer service was amazing"</h5>
-<p style = "text-align: center; font-size: 15px">I have never been to a writing warehouse before, and I was skepticle at the type of service I would recieve at first. Not only was I pleasantly surprised by how much the employees cared about me and my experience, but my expectations were far exceeded. From walking into the door and being greated by a smiling face, to having every question be answered, to getting the product that best fit my needs I give my experience at Willie and Willy's Writing Warehouse a 10/10</p>
+<p style = "text-align: center; font-size: 15px">I have never been to a writing warehouse before, and I was skeptical at the type of service I would receive at first. Not only was I pleasantly surprised by how much the employees cared about me and my experience, but my expectations were far exceeded. From walking into the door and being greeted by a smiling face, to having every question be answered, to getting the product that best fit my needs I give my experience at Willie and Willy's Writing Warehouse a 10/10</p>
 <h4 style = "font-size: 15px; text-align:center; color:black"><i><u>AJ Greenstein</u></i></h4>
 <hr size="5"
         color = black>
@@ -45,7 +45,7 @@ Don't just take our word for it! Ask our customers!</h1>
 <br>
 <ol style = "text-align: left"><h4 style = "font-size:15px; color:black"><li>Resume</li>
 <li> Attatched Cover Letter</li>
-<li>How you belive you are qualified to work at Willie and Willy's Writing Warehouse</li>
+<li>How you believe you are qualified to work at Willie and Willy's Writing Warehouse</li>
 <li> Feel free to click the downloadable link <a href="Krannert_Resume_Template.pdf" target="blank" download>here</a> for a free resume template.</li></h4></ol>
 <br>
 <p style = "text align: left; font-size: 15px"><i>*Dustin is available at all hours during the work day via email, please feel free to reach out</i></li></ul>
