Update Project 1 Company Story.html

--- a/Project 1 Company Story.html
+++ b/Project 1 Company Story.html
@@ -27,7 +27,7 @@ We provide a large selection of products for our customers such as the following
   <li>Associated Press Guides</li>
   <li><a href = "Krannert_Resume_Template.pdf" target = "_blank">Complimentary Resume Templates</a></li>
  </ul>
-  <u>Hold on!</u> We don't stop there. We also offer writers with comprehensive support help take their writing to the next level. Just couple of our services include in house editing and proofreading. Come check us out. 
+  <u>Hold on!</u> We don't stop there. We also offer writers with comprehensive support to help take their writing to the next level. Just couple of our services include in house editing and proofreading. Come check us out. 
 We'd be happy to help you with any of your writing needs.</font>
 <br>
 <br>
@@ -35,16 +35,16 @@ We'd be happy to help you with any of your writing needs.</font>
 <font size = "5"><b>Our History</b></font>
 <br>
 <font size = "4"> Our dedicated founder Ellie Zaczek formed Willie and Willy's about 6 years ago on a cold winter day in West Lafayette when she was working with 2 young writers (Willie and Willy).
- She has slowly built team of <a href= "https://purdue.edu" target = "_blank">Purdue University</a> students who use their talents together to make the world of writing a better place. 
+ She has slowly built a team of <a href= "https://purdue.edu" target = "_blank">Purdue University</a> students who use their talents together to make the world of writing a better place. 
  Over the past 6 years, we've taken the writing world by storm. We started our revolutionary journey by just selling writing supplies, and Ellie would roam the store getting to know the writers using our products.
-Writers grew to love the store's atmoshpere and talking to Ellie. Before she knew it, the store was selling out of its <i>entire inventory</i>., so going into our second year, we expanded our operations. 
+Writers grew to love the store's atmosphere and talking to Ellie. Before she knew it, the store was selling out of its <i>entire inventory</i>, so going into our second year, we expanded our operations. 
  We secured a wholesale supplier and warehouse space, and we more than doubled the amount of products we were able to move. With so many writers coming to us for equipment, Ellie decided to ask them how we could better help them, 
- and they wanted help with their writing. In our third year, we released our trademark writing support services. The writers loved it! Since then, we've been meeting with writers around the clock helping improve their writer and 
+ and they wanted help with their writing. In our third year, we released our trademark writing support services. The writers loved it! Since then, we've been meeting with writers around the clock helping improve their writing and 
  prepare for those future publisher meetings. Today, We have the following 5-person management team:
  <ol>
   <li> Ellie Zaczek <i>(Owner)</i></li>
   <li> Rajat Kadian <i>(Product Manager)</i></li>
-  <li> Gregoryy Krikorian <i>(Creative Director)</i></li>
+  <li> Gregory Krikorian <i>(Creative Director)</i></li>
   <li> Reed Luedtke <i>(Finance Manager)</i></li>
   <li> Dustin Rabin <i>(Operations Manager)</i></li>
  </ol>
