--- a/MGMT382-Krikorian.html
+++ b/MGMT382-Krikorian.html
@@ -11,11 +11,11 @@
 <body>
 <body bgcolor = "gold">
 <font color = "black">
-Here and Willie and Willy's Writing Warehouse, we offer many different products and services in order to create the best writing expereicne and best result possible. We believe that our products will give you the best opportunity not only to succeed with the task at hand, but to succeed with any future endevor. Our products can be used for any sort of writing, whether it be an essay, dissertation, or even a thesis, Wille and Willy's Writing Warehouse can help with them all. Our products include:
+Here and Willie and Willy's Writing Warehouse, we offer many different products and services in order to create the best writing experience and best result possible. We believe that our products will give you the best opportunity not only to succeed with the task at hand, but to succeed with any future endeavor. Our products can be used for any sort of writing, whether it be an essay, dissertation, or even a thesis, Wille and Willy's Writing Warehouse can help with them all. Our products include:
 <br>
 1. Office Supplies
 <br>
-2. Editing Serivce
+2. Editing Service
 <br>
 3. Proofreading Service
 <br>
