--- a/frame2.html
+++ b/frame2.html
@@ -5,7 +5,7 @@
 <body bgcolor = "gold">
 
 
-<center><h1><b><u><font size = "12" face = "Courier"> Product and Services </font></u></b></h1></center>
+<center><h1><b><u><font size = "12" face = "Courier"> Company Services </font></u></b></h1></center>
 
 
 <font size = "8">
