--- a/frame1.html
+++ b/frame1.html
@@ -10,10 +10,10 @@
  <br>
 <a href = "frame2.html" target = "showframe">Company Services</a>
  <br>
+<a href = "MGMT382-Krikorian.html" target = "showframe">Company Products</a>
+<br>
 <a href = "final_CS_webpage.html" target = "showframe">Customer Testimonial</a>
- <br>
-<a href = "MGMT382-Krikorian.html" target = "showframe">Products and Services</a>
- <br>
+<br>
 
 
 <br>
