--- a/frame1.html
+++ b/frame1.html
@@ -4,12 +4,12 @@
 </head>
 <body bgcolor = "#FFD700">
  <br>
+<a href = "Management Team.html" target = "showframe">Management Team</a> <br>
+<br>
 <a href = "Project 1 Company Story.html" target = "showframe">Company Story</a>
- <br>
-<a href = "Management Team.html" target = "showframe">Management Team</a>
- <br>
+<br>
 <a href = "frame2.html" target = "showframe">Company Services</a>
- <br>
+<br>
 <a href = "MGMT382-Krikorian.html" target = "showframe">Company Products</a>
 <br>
 <a href = "final_CS_webpage.html" target = "showframe">Customer Testimonial</a>
